test/typecheck/bad-select-value0.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module
  (func
    i32.const 0
    f64.const 0
    f32.const 0
    select
    drop))
(;; STDERR ;;;
out/test/typecheck/bad-select-value0.txt:8:5: error: type mismatch in select, expected [f64, f64, i32] but got [i32, f64, f32]
    select
    ^^^^^^
;;; STDERR ;;)
